--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,35 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="script.js" type="module"></script>
 </head>
+
 <body>
-    
+    <main>
+        <header>
+            <h1>Adatok listázása</h1>
+        </header>
+
+        <nav>
+            <p>Kutyák adatainak megtekintése</p>
+            <p>Admin</p>
+        </nav>
+        <article>
+            <label for="nev"></label>
+            <input type="text" id="nev" name="nev" placeholder="Név szerint szűrés">
+
+            <label for="kor"></label>
+            <input type="text" id="kor" name="kor" placeholder="pl.: 12, =12, 12">
+
+            <label for="fajta"></label>
+            <input type="text" id="fajta" name="fajta" placeholder="Fajta szerint szűrés">
+            <label for="gomb"></label>
+            <input type="submit" id="gomb" name="gomb" value="Új elem">
+
+            <div id="tablazat">
+
+            </div>
+        </article>
+        <footer>Családi Alexandra</footer>
+    </main>
 </body>
+
 </html>
